; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_ScspCheckInterrupts.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp2.c_ScspCheckInterrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64, i64 }

@scsp = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SCSP_INTTARGET_MAIN = common dso_local global i32 0, align 4
@SCSP_INTTARGET_SOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @ScspCheckInterrupts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ScspCheckInterrupts(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %44, %2
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 11
  br i1 %8, label %9, label %47

9:                                                ; preds = %6
  %10 = load i32, i32* %5, align 4
  %11 = shl i32 1, %10
  %12 = load i32, i32* %3, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scsp, i32 0, i32 0), align 8
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %9
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scsp, i32 0, i32 3), align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %17
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @SCSP_INTTARGET_MAIN, align 4
  %23 = load i32, i32* %4, align 4
  %24 = and i32 %22, %23
  %25 = call i32 @ScspRaiseInterrupt(i32 %21, i32 %24)
  br label %26

26:                                               ; preds = %20, %17, %9
  %27 = load i32, i32* %5, align 4
  %28 = shl i32 1, %27
  %29 = load i32, i32* %3, align 4
  %30 = and i32 %28, %29
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scsp, i32 0, i32 1), align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %43

34:                                               ; preds = %26
  %35 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scsp, i32 0, i32 2), align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* @SCSP_INTTARGET_SOUND, align 4
  %40 = load i32, i32* %4, align 4
  %41 = and i32 %39, %40
  %42 = call i32 @ScspRaiseInterrupt(i32 %38, i32 %41)
  br label %43

43:                                               ; preds = %37, %34, %26
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %5, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %5, align 4
  br label %6

47:                                               ; preds = %6
  ret void
}

declare dso_local i32 @ScspRaiseInterrupt(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
